fixed sizing on mobile and added tags

--- a/src/Components/ProjectPopUp/ProjectPopUp.scss
+++ b/src/Components/ProjectPopUp/ProjectPopUp.scss
@@ -18,7 +18,6 @@
   background-color: white;
   border: solid $border-height black;
 
-
   &__imageHolder {
     height: 45vh;
     width: 100%;
@@ -38,7 +37,7 @@
     flex-direction: column;
     justify-content: space-around;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 60% 1fr;
     grid-template-rows: 1fr 1fr;
     padding: 20px;
 
@@ -46,13 +45,11 @@
       position: absolute;
       top: 10px;
       right: 10px;
-      height: 20px;
-      width: 20px;
       z-index: 10;
       background: black;
       color: white;
-      border-radius: 50%;
       font-family: $headingFont;
+      font-size: 1.5em;
     }
 
     &-desc {
@@ -98,9 +95,13 @@
     }
 
     &-stack {
+      
       grid-area: 2/1/3/2;
-      margin: auto 0;
-      // grid-template-columns: repeat(auto-fit, minmax(69px, 70px));
+      margin: auto;
+      width: 100%;
+      display: flex;
+      flex-direction:column;
+  
 
       h2 {
         font-size: 1.2em;
@@ -108,11 +109,9 @@
       }
 
       &-items {
+        margin-top: 10px;
         display: flex;
-        flex-wrap: wrap;
-        gap:5px;
-        padding: 5px 0;
-        
+      flex-wrap: wrap;
       }
     }
 
@@ -193,7 +192,7 @@
     height: 90%;
     width: 90%;
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
     border: solid black $border-height;
 
     &__imageHolder {
@@ -264,8 +263,8 @@
       }
 
       &-stack {
-        display:flex;
-        flex-direction:column;
+        display: flex;
+        flex-direction: column;
         justify-content: space-between;
         align-content: center;
         width: 100%;
@@ -281,14 +280,12 @@
           list-style: none;
           display: flex;
           flex-wrap: wrap;
-          gap:5px;
-         align-items: center;
+          gap: 5px;
+          align-items: center;
 
-          img{align-self: center;}
-        
-
-      
-
+          img {
+            align-self: center;
+          }
         }
       }
 
